// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownNavigation renders correctly 1`] = `
<body>
  <div>
    <nav
      aria-describedby="dropdown-title"
      class="o-header__dropdown"
    >
      <button
        aria-controls="dropdown-options"
        aria-label="Dropdown menu has opened on focus, press Tab to access links."
        class="o-header__dropdown-button"
        data-trackable="test_tracking_toggle_click"
        tabindex="0"
      >
        <div
          class="o-header__dropdown-button-user-icon-wrapper"
        >
          <span
            aria-hidden="true"
            class="o-header__dropdown-icon user-icon"
          />
        </div>
        <span
          aria-hidden="true"
          class="o-header__dropdown-icon chevron-icon"
        />
      </button>
      <div
        class="o-header__dropdown-content"
        data-id="dropdown-content"
        data-o-tracking-view="test_tracking_component_view"
        id="dropdown-options"
        role="group"
        tabindex="-1"
      >
        <div
          class="o-header__dropdown-header"
        >
          <span
            class="o-header__dropdown-title"
            id="dropdown-title"
          >
            Test Title
          </span>
          <button
            aria-label="Close dropdown menu"
            class="o-header__dropdown-close-button-mobile"
            tabindex="0"
          />
        </div>
        <ul
          class="o-header__dropdown-list"
        >
          <li
            class="o-header__dropdown-list-item false"
          >
            <a
              class="o-header__dropdown-list-item-link"
              data-trackable="test_tracking_link-workspace_clicked"
              href="https://workspace.ft.com/"
            >
              <div
                class="o-header__dropdown-list-item-details-container"
              >
                <span
                  aria-hidden="true"
                  class="o-header__dropdown-icon dashboard-icon"
                />
                <span>
                  Workspace
                </span>
              </div>
            </a>
          </li>
          <li
            class="o-header__dropdown-list-item false"
          >
            <a
              class="o-header__dropdown-list-item-link"
              data-trackable="test_tracking_link-feed_clicked"
              href="https://www.ft.com/myft/following/"
            >
              <div
                class="o-header__dropdown-list-item-details-container"
              >
                <span
                  aria-hidden="true"
                  class="o-header__dropdown-icon list-icon"
                />
                <span>
                  Feed
                </span>
              </div>
            </a>
          </li>
          <li
            class="o-header__dropdown-list-item o-header__dropdown-list-divider"
          >
            <a
              class="o-header__dropdown-list-item-link"
              data-trackable="test_tracking_link-mpr_clicked"
              href="https://professional-monetary-policy-radar.ft.com/"
            >
              <div
                class="o-header__dropdown-list-item-details-container"
              >
                <span
                  aria-hidden="true"
                  class="o-header__dropdown-icon radar-icon"
                />
                <span>
                  Monetary Policy Radar
                </span>
              </div>
            </a>
          </li>
          <li
            class="o-header__dropdown-list-item false"
          >
            <a
              class="o-header__dropdown-list-item-link"
              data-trackable="test_tracking_link-saved-articles_clicked"
              href="https://www.ft.com/myft/saved-articles/"
            >
              <div
                class="o-header__dropdown-list-item-details-container"
              >
                <span
                  aria-hidden="true"
                  class="o-header__dropdown-icon bookmark-icon"
                />
                <span>
                  Saved articles
                </span>
              </div>
            </a>
          </li>
          <li
            class="o-header__dropdown-list-item false"
          >
            <a
              class="o-header__dropdown-list-item-link"
              data-trackable="test_tracking_link-highlights_clicked"
              href="https://highlights-dashboard.ft.com/"
            >
              <div
                class="o-header__dropdown-list-item-details-container"
              >
                <span
                  aria-hidden="true"
                  class="o-header__dropdown-icon highlight-icon"
                />
                <span>
                  Highlights
                </span>
              </div>
            </a>
          </li>
          <li
            class="o-header__dropdown-list-item o-header__dropdown-list-divider"
          >
            <a
              class="o-header__dropdown-list-item-link"
              data-trackable="test_tracking_link-advanced-sharing_clicked"
              href="https://sharing-dashboard.ft.com/"
            >
              <div
                class="o-header__dropdown-list-item-details-container"
              >
                <span
                  aria-hidden="true"
                  class="o-header__dropdown-icon share-icon"
                />
                <span>
                  Advanced Sharing
                </span>
              </div>
            </a>
          </li>
          <li
            class="o-header__dropdown-list-item false"
          >
            <a
              class="o-header__dropdown-list-item-link"
              data-trackable="test_tracking_link-newsletters_clicked"
              href="https://www.ft.com/newsletters"
            >
              <div
                class="o-header__dropdown-list-item-details-container"
              >
                <span
                  aria-hidden="true"
                  class="o-header__dropdown-icon mail-icon"
                />
                <span>
                  Newsletters
                </span>
              </div>
            </a>
          </li>
          <li
            class="o-header__dropdown-list-item false"
          >
            <a
              class="o-header__dropdown-list-item-link"
              data-trackable="test_tracking_link-account-settings_clicked"
              href="https://www.ft.com/myaccount/personal-details"
            >
              <div
                class="o-header__dropdown-list-item-details-container"
              >
                <span
                  aria-hidden="true"
                  class="o-header__dropdown-icon settings-icon"
                />
                <span>
                  Account settings
                </span>
              </div>
            </a>
          </li>
          <li
            class="o-header__dropdown-list-item false"
          >
            <a
              class="o-header__dropdown-list-item-link"
              data-trackable="test_tracking_link-sign-out_clicked"
              href="https://www.ft.com/logout"
            >
              <div
                class="o-header__dropdown-list-item-details-container"
              >
                <span
                  aria-hidden="true"
                  class="o-header__dropdown-icon exit-icon"
                />
                <span>
                  Sign out
                </span>
              </div>
            </a>
          </li>
        </ul>
      </div>
    </nav>
  </div>
</body>
`;

exports[`DropdownNavigation renders label 1`] = `
<body>
  <div>
    <nav
      aria-describedby="dropdown-title"
      class="o-header__dropdown"
    >
      <button
        aria-controls="dropdown-options"
        aria-label="Dropdown menu has opened on focus, press Tab to access links."
        class="o-header__dropdown-button"
        data-trackable="test_tracking_toggle_click"
        tabindex="0"
      >
        <div
          class="o-header__dropdown-button-user-icon-wrapper"
        >
          <span
            aria-hidden="true"
            class="o-header__dropdown-icon user-icon"
          />
        </div>
        <span
          aria-hidden="true"
          class="o-header__dropdown-icon chevron-icon"
        />
      </button>
      <div
        class="o-header__dropdown-content"
        data-id="dropdown-content"
        data-o-tracking-view="test_tracking_component_view"
        id="dropdown-options"
        role="group"
        tabindex="-1"
      >
        <div
          class="o-header__dropdown-header"
        >
          <span
            class="o-header__dropdown-title"
            id="dropdown-title"
          >
            Test Title
          </span>
          <button
            aria-label="Close dropdown menu"
            class="o-header__dropdown-close-button-mobile"
            tabindex="0"
          />
        </div>
        <ul
          class="o-header__dropdown-list"
        >
          <li
            class="o-header__dropdown-list-item false"
          >
            <a
              class="o-header__dropdown-list-item-link"
              data-trackable="test_tracking_link-workspace_clicked"
              href="https://workspace.ft.com/"
            >
              <div
                class="o-header__dropdown-list-item-details-container"
              >
                <span
                  aria-hidden="true"
                  class="o-header__dropdown-icon dashboard-icon"
                />
                <span>
                  Workspace
                </span>
              </div>
              <div>
                Mock Label
              </div>
            </a>
          </li>
          <li
            class="o-header__dropdown-list-item false"
          >
            <a
              class="o-header__dropdown-list-item-link"
              data-trackable="test_tracking_link-feed_clicked"
              href="https://www.ft.com/myft/following/"
            >
              <div
                class="o-header__dropdown-list-item-details-container"
              >
                <span
                  aria-hidden="true"
                  class="o-header__dropdown-icon list-icon"
                />
                <span>
                  Feed
                </span>
              </div>
            </a>
          </li>
          <li
            class="o-header__dropdown-list-item o-header__dropdown-list-divider"
          >
            <a
              class="o-header__dropdown-list-item-link"
              data-trackable="test_tracking_link-mpr_clicked"
              href="https://professional-monetary-policy-radar.ft.com/"
            >
              <div
                class="o-header__dropdown-list-item-details-container"
              >
                <span
                  aria-hidden="true"
                  class="o-header__dropdown-icon radar-icon"
                />
                <span>
                  Monetary Policy Radar
                </span>
              </div>
              <div>
                Mock Label
              </div>
            </a>
          </li>
          <li
            class="o-header__dropdown-list-item false"
          >
            <a
              class="o-header__dropdown-list-item-link"
              data-trackable="test_tracking_link-saved-articles_clicked"
              href="https://www.ft.com/myft/saved-articles/"
            >
              <div
                class="o-header__dropdown-list-item-details-container"
              >
                <span
                  aria-hidden="true"
                  class="o-header__dropdown-icon bookmark-icon"
                />
                <span>
                  Saved articles
                </span>
              </div>
            </a>
          </li>
          <li
            class="o-header__dropdown-list-item false"
          >
            <a
              class="o-header__dropdown-list-item-link"
              data-trackable="test_tracking_link-highlights_clicked"
              href="https://highlights-dashboard.ft.com/"
            >
              <div
                class="o-header__dropdown-list-item-details-container"
              >
                <span
                  aria-hidden="true"
                  class="o-header__dropdown-icon highlight-icon"
                />
                <span>
                  Highlights
                </span>
              </div>
              <div>
                Mock Label
              </div>
            </a>
          </li>
          <li
            class="o-header__dropdown-list-item o-header__dropdown-list-divider"
          >
            <a
              class="o-header__dropdown-list-item-link"
              data-trackable="test_tracking_link-advanced-sharing_clicked"
              href="https://sharing-dashboard.ft.com/"
            >
              <div
                class="o-header__dropdown-list-item-details-container"
              >
                <span
                  aria-hidden="true"
                  class="o-header__dropdown-icon share-icon"
                />
                <span>
                  Advanced Sharing
                </span>
              </div>
              <div>
                Mock Label
              </div>
            </a>
          </li>
          <li
            class="o-header__dropdown-list-item false"
          >
            <a
              class="o-header__dropdown-list-item-link"
              data-trackable="test_tracking_link-newsletters_clicked"
              href="https://www.ft.com/newsletters"
            >
              <div
                class="o-header__dropdown-list-item-details-container"
              >
                <span
                  aria-hidden="true"
                  class="o-header__dropdown-icon mail-icon"
                />
                <span>
                  Newsletters
                </span>
              </div>
            </a>
          </li>
          <li
            class="o-header__dropdown-list-item false"
          >
            <a
              class="o-header__dropdown-list-item-link"
              data-trackable="test_tracking_link-account-settings_clicked"
              href="https://www.ft.com/myaccount/personal-details"
            >
              <div
                class="o-header__dropdown-list-item-details-container"
              >
                <span
                  aria-hidden="true"
                  class="o-header__dropdown-icon settings-icon"
                />
                <span>
                  Account settings
                </span>
              </div>
            </a>
          </li>
          <li
            class="o-header__dropdown-list-item false"
          >
            <a
              class="o-header__dropdown-list-item-link"
              data-trackable="test_tracking_link-sign-out_clicked"
              href="https://www.ft.com/logout"
            >
              <div
                class="o-header__dropdown-list-item-details-container"
              >
                <span
                  aria-hidden="true"
                  class="o-header__dropdown-icon exit-icon"
                />
                <span>
                  Sign out
                </span>
              </div>
            </a>
          </li>
        </ul>
      </div>
    </nav>
  </div>
</body>
`;
